# lead-replacements

./: Boundaries_-_Community_Areas_20260612.json  Census_Tracts.json  T108293 Responsive Document2.xlsx  T111792_RecentReplacements-8.27.xlsx  T114037_Responsive_Document.xlsx  T126170_Responsive_Document.xlsx  checkit_fixed.csv  chi_tracts.geojson  chicago_community_areas.csv  chicago_community_areas.geojson  chicago_tracts_filled.csv  chicago_tracts_filled.geojson  chicago_tracts_filled.qmd  chicago_tracts_filled.qml  main.py  pyproject.toml
notebooks/: check.csv  checkit.csv  cleaning_new.ipynb  geocoded.csv  newdata_geocoded.csv  replacement-analysis.ipynb  step5_interim.csv  step6_interim.csv  step6trunc_interim.csv  test.csv  transform-replacement-data-2.ipynb
processed/: max_program_by_tract.csv  replacement_count_by_tract.csv  replacements_by_month_by_program_thru_aug.csv  replacements_unduplicated_uncleaned_update.csv  total_replacement_rate_by_cca_thru_aug.csv  total_replacement_rate_by_tract_thru_aug.csv
